--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -4,29 +4,34 @@
   padding: 20px;
   box-sizing: border-box;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
   background-color: #2a2c2f;
   color: #fff;
 }
 
+.footer__container {
+  margin: 0 75px 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__container:last-of-type {
+  margin: 0;
+}
+
 .footer__logo {
   width: 60px;
   height: 60px;
-  margin: 0 0 20px;
-  object-position: 4px;
-}
-
-.footer__container {
-  margin: 0 0 20px;
-  display: flex;
+  margin: 0 0 10px;
 }
 
 .footer__text {
-  margin: 0 30px 0 0;
-  font-size: 16px;
+  margin: 0 0 15px;
+  font-size: 18px;
   font-weight: 400;
-  line-height: 1;
+  line-height: 20px;
 }
 
 .footer__text:last-of-type {
@@ -35,7 +40,7 @@
 
 .footer__link {
   margin: 0;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   font-style: italic;
   line-height: 20px;
@@ -43,22 +48,60 @@
   color: #ff3700;
   cursor: pointer;
   transition: ease-in-out .6s;
+  position: relative;
 }
 
 .footer__link:hover {
   text-decoration: underline;
 }
 
+.footer__link_type_contact {
+  margin: 0 0 10px;
+  display: inline-flex;
+  align-items: center;
+}
+
+.footer__link_type_contact:last-of-type {
+  margin: 0;
+}
+
+.footer__icon {
+  width: 20px;
+  height: 20px;
+  margin: 0 5px 0 0;
+  object-fit: contain;
+}
+
 .footer__author {
   margin: 0;
-  font-size: 16px;
+  width: 100%;
+  font-size: 18px;
   font-weight: 400;
+  line-height: 20px;
+}
+
+.footer__title {
+  margin: 0 0 15px;
+  font-size: 22px;
+  font-weight: 600;
   line-height: 1;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
   .footer {
     padding: 20px 10px;
+    display: grid;
+    grid-template: repeat(2, auto)/repeat(2, 1fr);
+    align-items: flex-start;
+  }
+
+  .footer__container {
+    margin: 0;
+  }
+
+  .footer__container:last-of-type {
+    margin: 10px 0 0;
+    grid-column: 1/3;
   }
 
   .footer__logo {
@@ -67,18 +110,36 @@
     margin: 0 0 10px;
   }
 
-  .footer__container {
-    margin: 0 0 15px;
+  .footer__author {
+    width: auto;
   }
 }
 
-@media screen and (max-width: 600px) {
-  .footer__container {
-    flex-direction: column;
+@media screen and (max-width: 425px) {
+  .footer__title {
+    margin: 0 0 10px;
+    font-size: 16px;
+    line-height: 1;
   }
 
   .footer__text {
-    margin: 0 0 15px;
-    text-align: center;
+    margin: 0 0 10px;
+    font-size: 14px;
+    line-height: 1;
+  }
+
+  .footer__link {
+    font-size: 14px;
+    line-height: 1;
+  }
+
+  .footer__icon {
+    width: 14px;
+    height: 14px;
+  }
+
+  .footer__author {
+    font-size: 14px;
+    line-height: 1;
   }
 }
