--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,6 +1,8 @@
 .nav {
   width: auto;
   display: flex;
+  align-items: center;
+  position: relative;
 }
 
 .nav__list {
@@ -36,11 +38,11 @@
 }
 
 .nav__hexagon {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   position: absolute;
-  top: calc(50% - 25px);
-  left: calc(50% - 25px);
+  top: calc(50% - 20px);
+  left: calc(50% - 20px);
   opacity: 0;
   transition: ease-in-out 1s;
   z-index: -1;
@@ -50,8 +52,102 @@
   opacity: .8;
 }
 
-@media screen and (max-width: 850px) {
-  .nav {
-    display: none;
+.nav__button {
+  width: 50px;
+  height: 6px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: #fff;
+  border-radius: 20px;
+  cursor: pointer;
+  position: relative;
+  display: none;
+  transition: .3s .3s;
+}
+
+.nav__button:active {
+  outline: none;
+}
+
+.nav__button::before {
+  content: '';
+  width: 50px;
+  height: 6px;
+  position: absolute;
+  top: -12px;
+  left: 0;
+  background-color: #fff;
+  border-radius: 20px;
+  transition: top .3s .3s, transform .3s;
+}
+.nav__button::after {
+  content: '';
+  width: 50px;
+  height: 6px;
+  position: absolute;
+  top: 12px;
+  left: 0;
+  background-color: #fff;
+  border-radius: 20px;
+  transition: top .3s .3s, transform .3s;
+}
+
+.nav__button_active {
+  background: transparent;
+}
+
+.nav__button_active::before {
+  top: 0;
+  transform: rotate(-45deg);
+  transition: top .3s, transform .3s .3s;
+}
+.nav__button_active::after {
+  top: 0;
+  transform: rotate(45deg);
+  transition: top .3s, transform .3s .3s;
+}
+
+@media screen and (max-width: 500px) {
+  .nav__list {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 60px;
+    left: 0;
+    background-color: #2f2c2f;
+    transition: .65s ease-in-out;
+    opacity: 1;
+  }
+
+  .nav__list_hidden {
+    top: -100vh;
+    opacity: 0;
+  }
+
+  .nav__item {
+    margin: 0 0 20px;
+  }
+
+  .nav__item:last-of-type {
+    margin: 0 0 20px;
+  }
+  
+  .nav__link {
+    font-size: 18px;
+    line-height: 1;
+  }
+
+  .nav__hexagon {
+    width: 40px;
+    height: 40px;
+    top: calc(50% - 20px);
+    left: calc(50% - 20px);
+  }
+  
+  .nav__button {
+    display: block;
   }
 }
