--- a/src/components/description/description.css
+++ b/src/components/description/description.css
@@ -1,73 +1,116 @@
 .description {
-  max-width: 1200px;
   width: 100%;
   margin: 0;
-  padding: 30px 20px;
+  padding: 20px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-}
-
-.description__img {
-  max-width: 300px;
-  max-height: 450px;
-  margin: 0 40px 0 0;
-  object-fit: contain;
-  border-radius: 25px;
+  overflow: hidden;
 }
 
 .description__container {
+  max-width: 1200px;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .description__title {
-  margin: 0 0 15px;
+  margin: 0 0 25px;
   font-size: 35px;
   font-weight: bold;
   line-height: 1;
-  align-self: center;
+}
+
+.description__block {
+  max-width: 100%;
+  margin: 0 0 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  transition: .7s ease-in-out;
+}
+
+.description__block:last-of-type {
+  margin: 0;
+}
+
+.description__block:nth-child(2n+1) {
+  left: 200vw;
+}
+
+.description__block:nth-child(2n+1).description__block_visible {
+  left: 0;
+} 
+
+.description__block:nth-child(2n) {
+  flex-direction: row-reverse;
+  right: 200vw;
+}
+
+.description__block:nth-child(2n) .description__text {
+  margin: 0 0 0 15px;
+}
+
+.description__block:nth-child(2n).description__block_visible {
+  right: 0;
 }
 
 .description__text {
-  max-width: 600px;
-  margin: 0 0 15px;
-  font-size: 16px;
+  max-width: calc(100% - 315px);
+  margin: 0 15px 0 0;
+  font-size: 18px;
   font-weight: normal;
-  line-height: 18px;
+  line-height: 1.2;
   text-indent: 30px;
   text-align: justify;
 }
 
-.description__text:last-of-type {
-  margin: 0;
+.description__img {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 768px) {
   .description {
-    padding: 80px 10px 30px;
+    padding: 20px 10px;
   }
 
-  .description__img {
-    margin: 0 20px 0 0; 
+  .description__block {
+    flex-direction: column-reverse;
   }
 
-  .description {
-    flex-direction: column;
-    align-items: center;
+  .description__block:nth-child(2n) {
+    flex-direction: column-reverse;
   }
 
-  .description__img {
-    max-height: 300px;
-    width: 300px;
-    margin: 0 0 15px;
-    object-fit: cover;
-    object-position: top;
+  .description__block:nth-child(2n) .description__text {
+    margin: 15px 0 0;
   }
 
   .description__text {
+    max-width: 100%;
+    margin: 15px 0 0;
     font-size: 14px;
     line-height: 16px;
+  }
+
+  .description__img {
+    width: 80%;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .description__title {
+    margin: 0 0 15px;
+  }
+
+  .description__img {
+    width: 100%;
   }
 }
