--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,7 +3,7 @@
   height: 60px;
   padding: 10px 20px;
   box-sizing: border-box;
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   display: flex;
@@ -27,17 +27,12 @@
 .header__logo {
   width: 40px;
   height: 40px;
-  margin: 0 20px 0 0;
+  margin: 0;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
   .header {
-    height: 60px;
     padding: 10px;
-  }
-
-  .header__logo {
-    width: 40px;
-    height: 40px;
   }
 }
