--- a/src/components/perks/perks.css
+++ b/src/components/perks/perks.css
@@ -2,7 +2,7 @@
   max-width: 1200px;
   width: 100%;
   margin: 0;
-  padding: 30px 0 50px;
+  padding: 20px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,7 +10,7 @@
 }
 
 .perks__title {
-  margin: 0 0 15px;
+  margin: 0 0 25px;
   font-size: 35px;
   font-weight: bold;
   line-height: 1;
@@ -48,7 +48,7 @@
 
 @media screen and (max-width: 1200px) {
   .perks {
-    padding: 30px 20px;
+    padding: 20px;
   }
 }
 
@@ -63,6 +63,10 @@
 }
 
 @media screen and (max-width: 425px) { 
+  .perks__title {
+    margin: 0 0 15px;
+  }
+  
   .perks__grid-container {
     grid-template: 1fr/repeat(2, calc(50% - 10px));
   }
