--- a/src/components/description/description.css
+++ b/src/components/description/description.css
@@ -1,12 +1,8 @@
+@import './descriptionBlock/descriptionBlock.css';
+
 .description {
-  width: 100%;
-  margin: 0;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
   overflow: hidden;
 }
 
@@ -15,102 +11,4 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-}
-
-.description__title {
-  margin: 0 0 25px;
-  font-size: 35px;
-  font-weight: bold;
-  line-height: 1;
-}
-
-.description__block {
-  max-width: 100%;
-  margin: 0 0 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  transition: .7s ease-in-out;
-}
-
-.description__block:last-of-type {
-  margin: 0;
-}
-
-.description__block:nth-child(2n+1) {
-  left: 200vw;
-}
-
-.description__block:nth-child(2n+1).description__block_visible {
-  left: 0;
-} 
-
-.description__block:nth-child(2n) {
-  flex-direction: row-reverse;
-  right: 200vw;
-}
-
-.description__block:nth-child(2n) .description__text {
-  margin: 0 0 0 15px;
-}
-
-.description__block:nth-child(2n).description__block_visible {
-  right: 0;
-}
-
-.description__text {
-  max-width: calc(100% - 315px);
-  margin: 0 15px 0 0;
-  font-size: 18px;
-  font-weight: normal;
-  line-height: 1.2;
-  text-indent: 30px;
-  text-align: justify;
-}
-
-.description__img {
-  width: 300px;
-  height: 200px;
-  object-fit: cover;
-}
-
-@media screen and (max-width: 768px) {
-  .description {
-    padding: 20px 10px;
-  }
-
-  .description__block {
-    flex-direction: column-reverse;
-  }
-
-  .description__block:nth-child(2n) {
-    flex-direction: column-reverse;
-  }
-
-  .description__block:nth-child(2n) .description__text {
-    margin: 15px 0 0;
-  }
-
-  .description__text {
-    max-width: 100%;
-    margin: 15px 0 0;
-    font-size: 14px;
-    line-height: 16px;
-  }
-
-  .description__img {
-    width: 80%;
-    height: auto;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .description__title {
-    margin: 0 0 15px;
-  }
-
-  .description__img {
-    width: 100%;
-  }
 }
