--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #2a2c2f;
+  background-color: #2f2c2f;
   color: #fff;
 }
 
@@ -21,17 +21,25 @@
   margin: 0;
 }
 
+.footer__title {
+  margin: 0 0 15px;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 1;
+}
+
 .footer__logo {
   width: 60px;
   height: 60px;
   margin: 0 0 10px;
+  object-position: 4px;
 }
 
 .footer__text {
   margin: 0 0 15px;
   font-size: 18px;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 1.2;
 }
 
 .footer__text:last-of-type {
@@ -43,7 +51,7 @@
   font-size: 18px;
   font-weight: 400;
   font-style: italic;
-  line-height: 20px;
+  line-height: 1.2;
   text-decoration: none;
   color: #ff3700;
   cursor: pointer;
@@ -74,22 +82,13 @@
 
 .footer__author {
   margin: 0;
-  width: 100%;
   font-size: 18px;
   font-weight: 400;
-  line-height: 20px;
-}
-
-.footer__title {
-  margin: 0 0 15px;
-  font-size: 22px;
-  font-weight: 600;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 @media screen and (max-width: 800px) {
   .footer {
-    padding: 20px 10px;
     display: grid;
     grid-template: repeat(2, auto)/repeat(2, 1fr);
     align-items: flex-start;
@@ -103,48 +102,15 @@
     margin: 10px 0 0;
     grid-column: 1/3;
   }
+}
 
-  .footer__logo {
-    width: 40px;
-    height: 40px;
-    margin: 0 0 10px;
-  }
-
-  .footer__author {
-    width: auto;
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 20px 10px;
   }
 }
 
-@media screen and (max-width: 425px) {
-  .footer__title {
-    margin: 0 0 10px;
-    font-size: 16px;
-    line-height: 1;
-  }
-
-  .footer__text {
-    margin: 0 0 10px;
-    font-size: 14px;
-    line-height: 1;
-  }
-
-  .footer__link {
-    font-size: 14px;
-    line-height: 1;
-  }
-
-  .footer__icon {
-    width: 14px;
-    height: 14px;
-  }
-
-  .footer__author {
-    font-size: 14px;
-    line-height: 1;
-  }
-}
-
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 500px) {
   .footer {
     display: flex;
     flex-direction: column;
@@ -152,7 +118,7 @@
   }
 
   .footer__container {
-    margin: 0 0 10px;
+    margin: 0 0 20px;
   }
 
   .footer__container:last-of-type {
