--- a/src/components/greeting/greeting.css
+++ b/src/components/greeting/greeting.css
@@ -1,22 +1,20 @@
 .greeting {
-  max-width: 100%;
+  width: 100%;
   height: calc(100vh - 60px);
   width: 100%;
-  margin: 60px 0 0;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
+  align-items: center;
   background-size: cover;
   background-position: center;
   animation: changeBg 25s ease infinite;
 }
 
 .greeting__container {
-  max-width: 1200px;
-  width: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -35,23 +33,22 @@
   font-weight: bold;
   line-height: 1.2;
   color: #fff;
-  text-shadow: #000 2px 2px 1px;
+  text-shadow: #000 3px 3px 2px;
 }
 
 @media screen and (max-width: 1024px) {
   .greeting__img {
-    width: 200px;
-    max-height: 200px;
+    width: 250px;
+    max-height: 250px;
     margin: 0 20px 0 0;
   }
 
   .greeting__title {
-    font-size: 30px;
-    line-height: 1.2;
+    font-size: 35px;
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .greeting {
     padding: 0 10px;
   }
@@ -60,13 +57,28 @@
     flex-direction: column-reverse;
   }
 
-  .greeting__title {
-    margin: 0 0 20px;
-    font-size: 28px;
+  .greeting__img {
+    width: 300px;
+    max-height: 300px;
+    margin: 0;
   }
 
+  .greeting__title {
+    margin: 0 0 20px;
+    text-align: center;
+    font-size: 45px;
+  }
+}
+
+@media screen and (max-width: 375px) {
   .greeting__img {
+    width: 100%;
+    max-height: auto;
     margin: 0;
+  }
+
+  .greeting__title {
+    font-size: 28px;
   }
 }
 
