--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -7,3 +7,25 @@
   flex-direction: column;
   align-items: center;
 }
+
+.block {
+  width: 100%;
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+.block__title {
+  margin: 0 0 25px;
+  font-size: 40px;
+  font-weight: bold;
+  line-height: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .block {
+    padding: 20px 10px;
+  }
+}
