--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,3 +1,5 @@
+@import './navItem/navItem.css';
+
 .nav {
   width: auto;
   display: flex;
@@ -14,42 +16,6 @@
   justify-content: space-between;
   align-items: center;
   list-style-type: none;
-}
-
-.nav__item {
-  margin: 0 30px 0 0;
-  display: flex;
-  box-sizing: content-box;
-  position: relative;
-  cursor: pointer;
-}
-
-.nav__item:last-of-type {
-  margin: 0;
-}
-
-.nav__link {
-  margin: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 16px;
-  text-decoration: none;
-  color: #fff; 
-}
-
-.nav__hexagon {
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  top: calc(50% - 20px);
-  left: calc(50% - 20px);
-  opacity: 0;
-  transition: ease-in-out 1s;
-  z-index: -1;
-}
-
-.nav__item:hover .nav__hexagon {
-  opacity: .8;
 }
 
 .nav__button {
@@ -106,7 +72,7 @@
   transform: rotate(45deg);
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   .nav__list {
     height: auto;
     display: flex;
