--- a/src/components/perks/perks.css
+++ b/src/components/perks/perks.css
@@ -1,46 +1,13 @@
-.perks {
-  width: 100%;
-  margin: 0;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-sizing: border-box;
-}
+@import url(./perkBlock/perkBlock.css);
 
-.perks__title {
-  margin: 0 0 25px;
-  font-size: 35px;
-  font-weight: bold;
-  line-height: 1;
+.perks {
+  align-items: center;
 }
 
 .perks__container {
-  max-width: 1200px;
   margin: 0 0 20px;
   display: flex;
   position: relative;
-}
-
-.perk__arrow {
-  width: 50px;
-  height: 50px;
-  padding: 0;
-  margin: 0;
-  border: none;
-  border-top: 10px solid #ff3700;
-  border-right: 10px solid #ff3700;
-  background: transparent;
-  position: absolute;
-  top: calc(50% - 30px);
-  right: -40px;
-  transform: rotate(45deg);
-  cursor: pointer;
-}
-
-.perk__arrow_prev {
-  transform: rotate(225deg);
-  left: -40px;
 }
 
 .perks__subtitle {
@@ -51,85 +18,32 @@
   text-align: center;
 }
 
-.perk {
-  max-width: calc(100%/3 - 10px);
-  width: 100%;
+.perks__arrow {
+  width: 40px;
+  height: 40px;
+  padding: 0;
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  transform: scale(.75);
+  border: none;
+  border-top: 10px solid #ff3700;
+  border-right: 10px solid #ff3700;
+  background: transparent;
+  position: absolute;
+  top: calc(50% - 20px);
   cursor: pointer;
 }
 
-.perk_active {
-  margin: 0 30px;
-  transform: scale(1);
-  cursor: default;
+.perks__arrow_position_left {
+  transform: rotate(225deg);
+  left: -40px;
 }
 
-.perk__img {
-  width: 200px;
-  height: 200px;
-  margin: 0 0 15px;
-  object-fit: contain;
-}
-
-.perk__header {
-  margin: 0 0 10px;
-  display: flex;
-  align-items: center;
-}
-
-.perk__title {
-  margin: 0 10px 0 0;
-  font-size: 25px;
-  font-weight: normal;
-  line-height: 1;
-}
-
-.perk__number {
-  margin: 0;
-  font-size: 30px;
-  font-weight: 600;
-  line-height: 1;
-  color: #ff3700;
-}
-
-@media screen and (max-width: 768px) {
-  .perks {
-    padding: 20px 10px;
-  }
-
-  .perk {
-    display: none;
-  }
-
-  .perk_active{
-    max-width: 100%;
-    margin: 0;
-    display: flex;
-  }
-
-  .perk__arrow {
-    right: -60px;
-  }
-  
-  .perk__arrow_prev {
-    left: -60px;
-  }
+.perks__arrow_position_right {
+  transform: rotate(45deg);
+  right: -40px;
 }
 
 @media screen and (max-width: 425px) {
   .perks__subtitle {
     max-width: 100%;
-  }
-
-  .perk__arrow {
-    right: -40px;
-  }
-  
-  .perk__arrow_prev {
-    left: -40px;
   }
 }
