--- a/src/components/portfolio/project/project.css
+++ b/src/components/portfolio/project/project.css
@@ -9,12 +9,12 @@
 
 .project__title {
   margin: 0 0 15px;
-  font-size: 28px;
+  font-size: 30px;
   font-weight: 600;
-  line-height: 30px;
+  line-height: 1;
 }
 
-.project__img-container {
+.project__container {
   width: 100%;
   margin: 0 0 10px;
   display: flex;
@@ -31,23 +31,23 @@
   border-radius: 20px;
 }
 
-.project__description {
-  position: absolute;
-  bottom: -100%;
+.project__text {
   width: 100%;
   height: 100%;
   margin: 0;
-  padding: 25px;
+  padding: 20px;
   background: rgba(0, 0, 0, 0.5);
   border-radius: 20px;
   box-sizing: border-box;
-  font-size: 16px;
-  line-height: 18px;
+  position: absolute;
+  bottom: -100%;
+  font-size: 18px;
+  line-height: 1;
   text-align: justify;
   transition: ease-in-out .5s;
 }
 
-.project__img-container:hover .project__description {
+.project__container:hover .project__text {
   bottom: 0;
 }
 
@@ -71,7 +71,7 @@
   font-size: 20px;
   font-weight: 400;
   font-style: italic;
-  line-height: 22px;
+  line-height: 1;
   text-decoration: none;
   color: #ff3700;
   cursor: pointer;
@@ -89,13 +89,22 @@
     line-height: 1;
   }
 
-  .project__link {
-    font-size: 18px;
-    line-height: 1;
+  .project__text {
+    padding: 10px;
+    font-size: 14px;
   }
+}
 
-  .project__description {
-    font-size: 12px;
-    line-height: 14px;
+@media screen and (max-width: 600px) {
+  .project__text {
+    padding: 20px;
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .project__text {
+    padding: 15px;
+    font-size: 14px;
   }
 }
