--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -2,7 +2,7 @@
 
 .portfolio {
   align-items: center;
-  background-image: url('../../images/background.jpg');
+  background-image: url('../../images/protfolio-bg.jpg');
   background-size: cover;
   background-repeat: repeat;
   color: #fff;
