--- a/src/components/description/descriptionBlock/descriptionBlock.css
+++ b/src/components/description/descriptionBlock/descriptionBlock.css
@@ -18,7 +18,7 @@
 
 .description__block:nth-child(2n+1).description__block_visible {
   left: 0;
-} 
+}
 
 .description__block:nth-child(2n) {
   flex-direction: row-reverse;
@@ -51,20 +51,20 @@
 
 @media screen and (max-width: 768px) {
   .description__block {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 
   .description__block:nth-child(2n) {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 
   .description__block:nth-child(2n) .description__text {
-    margin: 15px 0 0;
+    margin: 0 0 15px;
   }
 
   .description__text {
     max-width: 80%;
-    margin: 15px 0 0;
+    margin: 0 0 15px;
     font-size: 16px;
   }
 
