--- a/src/components/greeting/greeting.css
+++ b/src/components/greeting/greeting.css
@@ -1,16 +1,13 @@
 .greeting {
   width: 100%;
   height: calc(100vh - 60px);
-  width: 100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-size: cover;
-  background-position: center;
-  animation: changeBg 25s ease infinite;
+  background: url(../../images/greeting-bg.jpg) center/cover no-repeat;
 }
 
 .greeting__container {
@@ -54,51 +51,29 @@
   }
 
   .greeting__container {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 
   .greeting__img {
     width: 300px;
     max-height: 300px;
-    margin: 0;
+    margin: 0 0 20px;
   }
 
   .greeting__title {
-    margin: 0 0 20px;
+    margin: 0;
     text-align: center;
     font-size: 45px;
   }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 500px) {
   .greeting__img {
     width: 100%;
     max-height: auto;
-    margin: 0;
   }
 
   .greeting__title {
-    font-size: 28px;
-  }
-}
-
-@keyframes changeBg {
-  from {
-    background-image: url('../../images/greeting/xcom.jpg');
-  }
-  20% {
-    background-image: url('../../images/greeting/sur.jpg');
-  }
-  40% {
-    background-image: url('../../images/greeting/sunset.jpg');
-  }
-  60% {
-    background-image: url('../../images/greeting/space.jpg');
-  }
-  80% {
-    background-image: url('../../images/greeting/medieval_city.jpg');
-  }
-  to {
-    background-image: url('../../images/greeting/xcom.jpg');
+    font-size: 25px;
   }
 }
