Изменил картинки проектов и описание. Исправил ошибки в стилях и опечатки. Добавил в favicon смену цвета в зависимости от темы браузера

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,6 +1,6 @@
 .portfolio {
   align-items: center;
-  background: url('../../images/protfolio-bg.jpg') center/contain repeat;
+  background: url('../../images/portfolio-bg.jpg') center/contain repeat;
   color: #fff;
 }
 
